<resources>
    <string name="app_name">ShariganManga</string>
    <string name="recommend">Recommend</string>
    <string name="day_rank">Day</string>
    <string name="comic_rank">Comic Rank</string>
    <string name="month_rank">Month</string>
    <string name="week_rank">Week</string>
    <string name="all_rank">Total</string>
    <string name="hot_manga">Hot</string>
    <string name="new_manga">New</string>
    <string name="finish_manga">Finish</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="chapter">%s Chapters</string>
    <string name="theme">Theme</string>
    <string name="order">Order</string>
    <string name="error">Something Error</string>
    <string name="retry">Retry</string>
    <string name="next_chapter">Next chapter</string>
    <string name="about">About</string>
    <string name="search_text">Search…</string>
    <string name="history">History</string>
    <string name="error_non_text">No input text</string>
    <string name="touch_to_retry">Touch to retry</string>
    <string name="explore">Explore</string>
    <string name="load_failure">Load failure</string>
    <string name="all_clear">All clear</string>
    <string name="above_chapter">Above chapter</string>
    <string name="slider_bar_cd">slider bar that show pager number</string>
    <string name="no_history">History is empty</string>
    <string name="japanese_r_to_l">Reader mode: right to left</string>
    <string name="korea_chinese_top_to_bottom">Reader model: webtoon</string>
    <string name="pref_main">Main</string>
    <string name="pref_orintation">Prefer orientation</string>
    <string name="perf_about">About project</string>
    <string name="pref_app">Project</string>
    <string name="pref_app_summary">Look at this app github website</string>
    <string name="pref_about_summary">Look app info and LICENSE</string>
    <string name="use_forgin_region">Use foreign api</string>
    <string name="use_forgin_region_summary">Use the foreign api for request</string>
    <string name="use_forgin_region_tip">Tip: whatever api do you use, only the image CDN will change</string>
    <string name="setting">Setting</string>
    <string name="last_update">Last update in %s</string>
    <string name="download_channel_name">Download Manga</string>
    <string name="manga_download_get_ready">Download prepare</string>
    <string name="system">System</string>
    <string name="clear_cache">Clear cache</string>
    <string name="cache_used">%s of internal storage is used by cache</string>
    <string name="clear_pager_cache">Clear pager cache</string>
    <string name="error_in_download">Download error</string>
    <string name="downloading">Downloading</string>
    <string name="waiting">Waiting</string>
    <string name="all_done">All done!</string>
    <string name="cancel">Cancelled</string>
    <string name="items_downloaded">%s Items</string>
    <string name="post_before_done">In process of post-before-done</string>
    <string name="perpare_to_finish">Prepare to finish</string>
    <string name="download_manga">Download</string>
    <string name="see_the_download">See the downloading content</string>
    <string name="manga_mode_l_t_r">Reader mode: left to right</string>
    <string name="reader_mode_tip">Select the Reader mode</string>
    <string name="local">Local</string>
    <string name="in_loading_next_chapter">Loading chapter</string>
    <string name="chapter_page_indicator" translatable="false">%d / %d</string>
    <string name="personal">Personal</string>
    <string name="quick_touch">Quick touch</string>
    <string name="quick_touch_summary">Tap the bottom of srceen to scroll page</string>
    <string name="new_version">New version was found</string>
    <string name="update">Update</string>
    <string name="website_look">Website</string>
    <string name="disable_update_detect">Disable detect new version</string>
    <string name="disable_update_summary">Maybe miss some important fixes</string>
    <string name="home_des">Home</string>
    <string name="select_api_header">Select api header</string>
    <string name="top">Region</string>
    <string name="rank_mini">Rank</string>
    <string name="trend_up">Trend up</string>
    <string name="default_select">No select</string>
    <string name="no_alias">No alias</string>
    <string name="manga_info_collapse">Collapse</string>
    <string name="manga_info_expand">Expand</string>
    <string name="no_description">No description</string>
    <string name="manga_detail">Detail</string>
    <string name="back_to_up">Navigate up</string>
    <string name="chapters_list">List</string>
    <string name="preparing">Preparing</string>
    <string name="empty_download">Downloads is empty</string>
    <string name="download_first_5">Download the first five chapters</string>
    <string name="download_all">Download all chapters</string>
    <string name="download_last_5">Download the last five chapters</string>
    <string name="exit_select_mode">Exit selection mode</string>
    <string name="switch_api_dialog_summary">Select a URL host, and you need to refresh the data after switching to see the effect. Under normal circumstances, if you are not sure that it is the official reason but it cannot be loaded, you can try to switch.</string>
    <string name="swith_reader_mode_dialog_summary">Toggle reading mode. Under normal circumstances, if you have set the reading mode while watching the manga, then this option will not affect the set manga.</string>
    <string name="close_search_dock">Close search dock</string>
    <string name="input_the_word">Type search</string>
    <string name="subscribe_for_updates">Subscribe for updates</string>
    <string name="unsubscribe_for_updates">Unsubscribe for updates</string>
    <string name="enable">enable</string>
    <string name="not_enabled">Not enabled</string>
    <string name="enable_update_text">Do you need to enable scheduled updates? This will refresh the manga at a specific time, you can manually turn it off in the settings. If not enabled you can refresh manually.</string>
    <string name="confrim_update">Regularly update comics?</string>
    <string name="subscribe_for_updates_summary">After it is turned on, it will try to detect whether the manga is updated at a fixed time</string>
    <string name="see_all">Look all</string>
    <string name="subscribe">Subscribe</string>
    <string name="copy_manga_summary">A third-party app for Copy Manga with Material You features</string>
    <string name="open_source">Open source</string>
    <string name="update_manga">Update manga</string>
    <string name="completed">Completed</string>
    <string name="input">Input</string>
    <string name="time_detect">Detection interval (hours)</string>
    <string name="time_detect_summary">Enter the detection interval. In order to avoid the server from detecting third-party requests due to excessive throughput, it is recommended that the interval be as long as possible.</string>
    <string name="only_wifi">In wifi</string>
    <string name="only_charging">In charging</string>
    <string name="low_power">In low power</string>
    <string name="update_constant">Update constants</string>
    <string name="update_constant_support_text">Set the conditions when updating</string>
    <string name="work_information">Work Information</string>
    <string name="work_info_summary">View information about the worker used by the application</string>
    <string name="successed">Successes</string>
    <string name="running">Running</string>
    <string name="enqueue">Enqueue</string>
    <string name="no_select_constants">No select constants</string>
    <string name="read_in">• Read in %d</string>
    <string name="refresh">Manual refresh</string>
    <string name="continue_read">Continue read</string>
    <string name="start_read">Start read</string>
    <string name="search_is_empty">Search is empty</string>
    <string name="info_read_in">Read Chapter %d, Page %d</string>
    <string name="theme_mode">Theme Mode</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_with_system">System</string>
    <string name="theme_mode_support_text">Select the system theme mode, and "System" will become useless on some systems that do not have a "night mode" themselves.</string>
    <string name="cut_out_display">Display content in the notch area</string>
    <string name="no_next_chapetr">No next chapter</string>
    <string name="no_privous_chapter">No previous chapter</string>
    <string name="cut_out_display_summary">It is recommended to turn it on. If you turn it off, the notch area will be displayed in black</string>
    <string name="tip_subscribe">Note: If your phone is more aggressive about backend management, it may not update.</string>
    <string name="delete">Delete</string>
    <string name="topic">Topic</string>
    <string name="topic_detail_text">Topic details</string>
    <string name="cache_size_setting">Cache size</string>
    <string name="cache_size_setting_supporting_text">Set the maximum cache size generated gor reading (MB)</string>
    <string name="read_finished">• Finished</string>
    <string name="mark_to_read">Mark to read</string>
    <string name="mark_to_no_read">Mark to no read</string>
    <string name="no_content">No content</string>
    <string name="login_text">Login</string>
    <string name="user_name_text">Username</string>
    <string name="password_text">Password</string>
    <string name="no_login">No login</string>
    <string name="login_personal">User</string>
    <string name="shelf_cloud">Clouded lib</string>
    <string name="local_history">Local history</string>
    <string name="web_history">Web history</string>
    <string name="re_login">Re-register</string>
    <string name="gender">Gender</string>
    <string name="nickname_text">nickname</string>
    <string name="fatal_error">Fatal error</string>
    <string name="try_to_send_to_me">Please try to send to the author</string>
    <string name="send">Send</string>
    <string name="finish_this">End</string>
    <string name="add">Add</string>
    <string name="personal_info">Personal information</string>
    <string name="author_choice">Choose author</string>
    <string name="author_combine">Total %s authors</string>
    <string name="authors_manga">Author Mangas</string>
    <string name="web_point_enable">Use web reading point</string>
    <string name="web_point_enable_summary">Start watching from your web browsing history</string>
    <string name="comment_text">Comment</string>
    <string name="login_expired">Login status is expired</string>
    <string name="login_failure">Login failure</string>
    <string name="web_point_warning">I don\'t know if this feature is stable. If this option affects viewing, it is recommended to turn it off.</string>
    <string name="web_point_tip">Note: If you are not logged in or your login has expired, local records will be used.</string>
    <string name="add_to_lib">Add to bookshelf</string>
    <string name="remove_add_to_lib">Remove from bookshelf</string>
    <string name="type_send_content">Enter content…</string>
    <string name="send_comment_bar_title">Send comment</string>
    <string name="comic_comment_title">Comic Comment</string>
    <string name="search_result">Search Result</string>
    <string name="send_comment">发送</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="only_on_wifi">Download comics only under Wi-Fi</string>
    <string name="only_on_wifi_summary">After turning on, downloading comics will only be downloaded under WI-FI</string>
    <string name="failure_download">Downloaded failure</string>
    <string name="prerequisites_miss">Prerequisites miss</string>
    <string name="thankful_app">Source of inspiration</string>
</resources>