<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@android:string/search_go"
        android:icon="@drawable/ic_manga_search"
        app:showAsAction="always"
        android:id="@+id/id_manga_search"
        android:contentDescription="@android:string/search_go"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:title="@string/login_text"
        android:icon="@drawable/ic_manga_login"
        app:showAsAction="always"
        android:id="@+id/id_manga_login"
        android:contentDescription="@string/login_text"/>

    <item
        android:title="@string/history"
        android:id="@+id/id_manga_history"
        android:icon="@drawable/ic_manga_history"
        app:showAsAction="always"/>

    <item
        android:title="@string/about"
        android:icon="@drawable/ic_manga_info_main"
        android:id="@+id/about_main"
        android:contentDescription="@string/about"
        app:showAsAction="always"/>



</menu>