<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.shicheeng.copymanga.view.MyRecyclerView
        android:id="@+id/recycler_view_manga_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints,NotSibling" />

    <com.shicheeng.copymanga.view.HeadLineView
        android:id="@+id/headline_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headTitle="@string/recommend"
        tools:ignore="MissingConstraints" />

    <com.shicheeng.copymanga.view.MyRecyclerView
        android:id="@+id/recycler_view_manga_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.shicheeng.copymanga.view.HeadLineView
        android:id="@+id/headline_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headTitle="@string/comic_rank" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/rank_tab_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/rank_view_pager_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.shicheeng.copymanga.view.HeadLineView
        android:id="@+id/headline_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headTitle="@string/hot_manga" />

    <com.shicheeng.copymanga.view.MyRecyclerView
        android:id="@+id/recycler_view_manga_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.shicheeng.copymanga.view.HeadLineView
        android:id="@+id/headline_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headTitle="@string/new_manga" />

    <com.shicheeng.copymanga.view.MyRecyclerView
        android:id="@+id/recycler_view_manga_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.shicheeng.copymanga.view.HeadLineView
        android:id="@+id/headline_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headTitle="@string/finish_manga" />

    <com.shicheeng.copymanga.view.MyRecyclerView
        android:id="@+id/recycler_view_manga_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>