<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.shicheeng.copymanga.fm.view.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/activity_main">
        <action
            android:id="@+id/action_mainFragment_to_infoFragment"
            app:destination="@id/infoFragment" />
        <action
            android:id="@+id/action_mainFragment_to_recommendMangaFragment"
            app:destination="@id/recommendMangaFragment" />
        <action
            android:id="@+id/action_mainFragment_to_rankFragment"
            app:destination="@id/rankFragment" />
        <action
            android:id="@+id/action_mainFragment_to_newestFragment"
            app:destination="@id/newestFragment" />
        <action
            android:id="@+id/action_mainFragment_to_hotFragment"
            app:destination="@id/hotFragment" />
        <action
            android:id="@+id/action_mainFragment_to_finishedFragment"
            app:destination="@id/finishedFragment" />
        <action
            android:id="@+id/action_mainFragment_to_exploreFragment"
            app:destination="@id/exploreFragment" />
        <action
            android:id="@+id/action_mainFragment_to_searchResultFragment"
            app:destination="@id/searchResultFragment" />
        <action
            android:id="@+id/action_mainFragment_to_historyFragment"
            app:destination="@id/historyFragment" />
        <action
            android:id="@+id/action_mainFragment_to_settingFragment"
            app:destination="@id/settingFragment" />
        <action
            android:id="@+id/action_mainFragment_to_downloadInfoFragment"
            app:destination="@id/downloadInfoFragment" />
        <action
            android:id="@+id/action_mainFragment_to_personalFragment"
            app:destination="@id/personalFragment" />
    </fragment>
    <fragment
        android:id="@+id/infoFragment"
        android:name="com.shicheeng.copymanga.fm.view.InfoFragment"
        android:label="@string/manga">

        <action
            android:id="@+id/action_infoFragment_to_mangaReaderActivity2"
            app:destination="@id/mangaReaderActivity2" />
    </fragment>
    <fragment
        android:id="@+id/recommendMangaFragment"
        android:name="com.shicheeng.copymanga.fm.view.RecommendMangaFragment"
        android:label="@string/recommend">
        <action
            android:id="@+id/action_recommendMangaFragment_to_infoFragment"
            app:destination="@id/infoFragment" />
    </fragment>
    <fragment
        android:id="@+id/rankFragment"
        android:name="com.shicheeng.copymanga.fm.view.RankFragment"
        android:label="@string/comic_rank">
        <action
            android:id="@+id/action_rankFragment_to_infoFragment"
            app:destination="@id/infoFragment" />
    </fragment>
    <fragment
        android:id="@+id/newestFragment"
        android:name="com.shicheeng.copymanga.fm.view.NewestFragment"
        android:label="@string/new_manga">
        <action
            android:id="@+id/action_newestFragment_to_infoFragment"
            app:destination="@id/infoFragment" />
    </fragment>
    <fragment
        android:id="@+id/hotFragment"
        android:name="com.shicheeng.copymanga.fm.view.HotFragment"
        android:label="@string/hot_manga">
        <action
            android:id="@+id/action_hotFragment_to_infoFragment"
            app:destination="@id/infoFragment" />
    </fragment>
    <fragment
        android:id="@+id/finishedFragment"
        android:name="com.shicheeng.copymanga.fm.view.FinishedFragment"
        android:label="@string/finish_manga">
        <action
            android:id="@+id/action_finishedFragment_to_infoFragment"
            app:destination="@id/infoFragment" />
    </fragment>
    <fragment
        android:id="@+id/exploreFragment"
        android:name="com.shicheeng.copymanga.fm.view.ExploreFragment"
        android:label="@string/explore">
        <action
            android:id="@+id/action_exploreFragment_to_infoFragment"
            app:destination="@id/infoFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchResultFragment"
        android:name="com.shicheeng.copymanga.fm.view.SearchResultFragment"
        android:label="{search_word}"
        tools:layout="@layout/fragment_search_result">
        <action
            android:id="@+id/action_searchResultFragment_to_infoFragment"
            app:destination="@id/infoFragment" />
        <argument
            android:name="search_word"
            app:argType="string" />
    </fragment>
    <activity
        android:id="@+id/mangaReaderActivity2"
        android:name="com.shicheeng.copymanga.MangaReaderActivity"
        android:label="@string/manga"
        tools:layout="@layout/activity_manga_reader">
        <argument
            android:name="manga_chapter_items"
            app:argType="com.shicheeng.copymanga.data.MangaInfoChapterDataBean[]" />
        <argument
            android:name="path_word"
            app:argType="string" />

        <argument
            android:name="manga_title"
            app:argType="string" />

        <argument
            android:name="cover_url"
            app:argType="string" />
        <argument
            android:name="manga_chapter_item"
            app:argType="com.shicheeng.copymanga.data.MangaInfoChapterDataBean" />

    </activity>
    <include app:graph="@navigation/aboutlibs_navigation" />
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.shicheeng.copymanga.fm.view.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_manga_history">
        <action
            android:id="@+id/action_historyFragment_to_infoFragment"
            app:destination="@id/infoFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.shicheeng.copymanga.fm.view.SettingFragment"
        android:label="@string/setting">
        <action
            android:id="@+id/action_settingFragment_to_about_libraries"
            app:destination="@id/about_libraries" />
        <action
            android:id="@+id/action_settingFragment_to_downloadInfoFragment"
            app:destination="@id/downloadInfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/downloadInfoFragment"
        android:name="com.shicheeng.copymanga.fm.view.DownloadInfoFragment"
        android:label="@string/download_manga"
        tools:layout="@layout/fragment_download_info">
        <action
            android:id="@+id/action_downloadInfoFragment_to_mainFragment"
            app:destination="@id/mainFragment" />
    </fragment>
    <fragment
        android:id="@+id/personalFragment"
        android:name="com.shicheeng.copymanga.fm.view.PersonalFragment"
        android:label="@string/personal_center">
        <action
            android:id="@+id/action_personalFragment_to_historyFragment"
            app:destination="@id/historyFragment" />
    </fragment>

</navigation>