<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/change_mode_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/reader_mode_tip"
        android:textAppearance="?textAppearanceTitleSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/manga_reader_bottom_mode_select"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_mode_text">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/reader_switchers_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reader_switcher_to_horizontal"
                style="@style/Widget.CopyManga.ToggleButton.Vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/korea_chinese_top_to_bottom"
                app:icon="@drawable/ic_swith_vert" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reader_switcher_to_vert"
                style="@style/Widget.CopyManga.ToggleButton.Vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/japanese_r_to_l"
                app:icon="@drawable/ic_swith_horiz" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reader_switcher_to_l_to_r"
                style="@style/Widget.CopyManga.ToggleButton.Vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/manga_mode_l_t_r"
                app:icon="@drawable/ic_swith_horiz" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>